# serverman

./: README.md  serverman.cabal  stack.yaml
app/: Main.hs
src/System/: Serverman.hs  Term.hs
src/System/Serverman/: Action.hs  App.hs  Log.hs  Services.hs  Types.hs  Utils.hs
src/System/Serverman/Actions/: Call.hs  Database.hs  Env.hs  FileSharing.hs  Install.hs  Manage.hs  MongoDB.hs  Monitor.hs  MySQL.hs  Nginx.hs  Remote.hs  Repository.hs  Start.hs  VsFTPd.hs  WebServer.hs
src/System/Term/: Database.hs  FileSharing.hs  Install.hs  Remote.hs  WebServer.hs
test/: Utils.hs
